@@ -117,7 +117,7 @@ int m_links(struct Client* cptr, struct Client* sptr, int parc, char* parv[])
   if (feature_bool(FEAT_HIS_LINKS) && !IsAnOper(sptr)) {
     send_reply(sptr, RPL_ENDOFLINKS, parc < 2 ? "*" : parv[1]);
     sendcmdto_one(&me, CMD_NOTICE, sptr, "%C :%s %s", sptr,
-		  "/LINKS has been disabled, from CFV-165.  Visit ", 
+		  "/LINKS has been disabled. Visit ", 
 		  feature_str(FEAT_HIS_URLSERVERS));
     return 0;
   }
