@@ -1,3 +1,10 @@
+2002-12-31  hikari <shadow@undernet.org>
+       * m_userhost.c: Send the real userhost to opers.
+
+2002-12-31  David Mansell <splidge@quakenet.org>
+	* ircd/m_burst.c (ms_burst): when kicking net riders, clear invites
+	too.
+
 2002-12-30  Perry Lorier <isomer@undernet.org>
 	* ircd/m_gline.c: Server set glines are FORCE'd.
 	
